added routing by routify; project structure

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@roxi/routify": "^3.0.0-next.261",
     "@tailwindcss/vite": "^4.0.13"
+  },
+  "imports": {
+    "#*": "./src/lib/*"
   }
 }
